# self-healing-ML-platform-demand-forecasting

./: .gitignore  README.md  pyproject.toml  requirements-llm.txt  requirements.txt
examples/: run_demo.py
observability/: grafana_dashboard.json  prometheus_rules.yml
pipelines/: README.md  airflow_dag.py  kubeflow_pipeline.py  step_functions.json
src/self_healing_ml/: __init__.py  cli.py  config.py  scenario.py
src/self_healing_ml/data/: generator.py
src/self_healing_ml/drift/: __init__.py  confidence.py  detector.py  semantic.py
src/self_healing_ml/healing/: __init__.py  orchestrator.py  slo.py
src/self_healing_ml/models/: forecaster.py
src/self_healing_ml/observability/: __init__.py  metrics.py
src/self_healing_ml/registry/: __init__.py  model_registry.py
tests/: _bootstrap.py  conftest.py  run_tests.py  test_confidence.py  test_drift.py  test_forecaster.py  test_generator.py  test_metrics.py  test_orchestrator.py  test_registry.py  test_semantic_fallback.py  test_slo.py
